syntax = "proto3";

package pb;

option go_package = "github.com/Kisanlink/aaa-service/pb";

// User-related messages
message User {
    string id = 1;
    string username = 2;
    bool is_validated = 3;
    string created_at = 4;
    string updated_at = 5;
}





message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    int32 status_code = 1;       // HTTP status code equivalent
    string message = 2;          // Response message
    string token = 3;            // JWT token
    string refresh_token = 4;    // Refresh token (optional)
    User user = 5;               // User details
}



// User Service Messages
message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserRequest {}

message GetUserResponse {
    repeated User users = 1; // A list of users
}

message UpdateUserRequest {
    string id = 1;
    string username = 2;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    string message = 1;
}
message GetUserByIdRequest {
    string id = 1; // Unique ID of the user
}

message GetUserByIdResponse {
    User user = 1; // User details (excluding sensitive fields like Password)
}


// User Service Definition
service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
        rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
        rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse); // Add this line

}



